added message div, appended conditional message text

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Iterating Through Life</title>
   </head>
   <body>
+    <div id="message-container">
+
+    </div>
     <form>
       Goal<input type="number" name="goal" id="goal" /><br />
       Made<input type="number" name="made" id="made" /><br />
