created main.css, added classes to inputs, changed to innerHTML for message div

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     </div>
     <form>
-      Goal<input type="number" name="goal" id="goal" /><br />
-      Made<input type="number" name="made" id="made" /><br />
-      Missed<input type="number" name="missed" id="missed" /><br />
+      Goal<input class="form-input" type="number" name="goal" id="goal" /><br />
+      Made<input class="form-input" type="number" name="made" id="made" /><br />
+      Missed<input class="form-input" type="number" name="missed" id="missed" /><br />
       <button>
         Submit
       </button>
