updated form buttons to be space-evenly inside their own div

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       Goal<input class="form-input" type="number" name="goal" id="goal" /><br />
       Made<input class="form-input" type="number" name="made" id="made" /><br />
       Missed<input class="form-input" type="number" name="missed" id="missed" /><br />
-      <form class="btn-container">
+      <div class="btn-container">
       <button class="btn">
         Submit
       </button>
