--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     </div>
     <form class="form-container" id="form">
-      Goal<input class="form-input" type="number" name="goal" id="goal" /><br />
-      Made<input class="form-input" type="number" name="made" id="made" /><br />
-      Missed<input class="form-input" type="number" name="missed" id="missed" /><br />
+      Goal<input class="form-input" type="number" min="0" max="500" name="goal" id="goal" /><br />
+      Made<input class="form-input" type="number" min="0" max="500" name="made" id="made" /><br />
+      Missed<input class="form-input" type="number" min="0" max="500" name="missed" id="missed" /><br />
       <div class="btn-container">
       <button class="btn">
         Submit
