debugged submit function, updated styling, added favicon, links to github repo and portfolio site

--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./style.css">
-    <title>Iterating Through Life</title>
+    <title>Sure Shot</title>
   </head>
   <body class="color-change-3x">
+    <div class="header">
+        <h1>Sure Shot!</h1>
+    </div>
     <div id="overlay"></div>
+   
     <div id="message-container">
 
     </div>
@@ -29,5 +39,17 @@
     </div>
     </form>
     <script src="./index.js"></script>
-  </body>
+    <div class="logos">
+        <div class="github">
+            <a href="https://github.com/JawaraGordon/free-throw-counter" target="_blank" rel="noopener"><img src="./img/github-logo.png"></a>
+        </div>
+    </div>
+    <div class="footer">
+        <div>
+            <h2>
+                <a href="http://www.jawaragordon.com" target="_blank" rel="noopener">JawaraGordon.com</a>
+            </h2>
+        </div>
+    </div>
+</body>
 </html>
