created Scores class to handle high-score state

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
     <div class="header">
         <h1>Sure Shot!</h1>
     </div>
+    <div class="scoreboard">
+        <div id="score"></div>
+        <div id="high-score">&nbsp</div>
+    </div>
+    
     <div id="overlay"></div>
-   
     <div id="message-container">
 
     </div>
@@ -38,7 +42,7 @@
         </input>
     </div>
     </form>
-    <script src="./index.js"></script>
+    
     <div class="logos">
         <div class="github">
             <a href="https://github.com/JawaraGordon/free-throw-counter" target="_blank" rel="noopener"><img src="./img/github-logo.png"></a>
@@ -51,6 +55,8 @@
             </h2>
         </div>
     </div>
+    <script src="./scores.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
 
