--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./style.css">
+    <script defer src="./scores.js"></script>
+    <script defer src="./index.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script defer src="./chart.js"></script>
     <title>Sure Shot</title>
   </head>
   <body class="color-change-3x">
@@ -65,13 +69,6 @@
             </h2>
         </div>
     </div>
-    <script src="./scores.js"></script>
-    <script src="./index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="./chart.js"></script>
-    
-      
-
 </body>
 </html>
 
