--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="chart-btn-container">
         <label id="chart-toggle-label">Score Chart</label>
         <label class="switch">
-            <input onclick="toggleChart()" id="chart-toggle" type="checkbox" >
+            <input id="chart-toggle" type="checkbox" >
             <span class="slider round"></span>
           </label>
     </div>
