creating a function to add highscore to array

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script defer src="./index.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script defer src="./chart.js"></script>
+    <script defer src="./state.js"></script>
     <title>Sure Shot</title>
   </head>
   <body class="color-change-3x">
