instantiating best score class

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <h1>Sure Shot!</h1>
     </div>
     <div class="scoreboard">
+        <div id="best-score"></div>
+        <div id="best-score-amount">&nbsp</div>
         <div id="score"></div>
         <div id="high-score">&nbsp</div>
     </div>
