renamed and refactored high-score into game-score to show current session made shot count - added styling to float right

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <h1>Sure Shot!</h1>
     </div>
     <div class="scoreboard">
-        <div id="best-score"></div>
-        <div id="best-score-amount">&nbsp</div>
-        <div id="score"></div>
+        <div id="high-score-made"></div>
         <div id="high-score">&nbsp</div>
+        <div id="game-score-made"></div>
+        <div id="game-score">&nbsp</div>
     </div>
     <div class="chart-btn-container">
         <label id="chart-toggle-label">Score Chart</label>
