updated scoreboard and all display div styling, padding and margin

--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
         <h1>Sure Shot!</h1>
     </div>
     <div class="scoreboard">
-        <div id="high-score-made"></div>
-        <div id="high-score">&nbsp</div>
-        <div id="game-score-made"></div>
-        <div id="game-score">&nbsp</div>
+        <div class="high-score-container">
+            <div id="high-score-made"></div>
+            <div id="high-score">&nbsp</div>
+        </div>
+        <div class="game-score-container">
+            <div id="game-score-made"></div>
+            <div id="game-score">&nbsp</div>
+        </div>
     </div>
     <div class="chart-btn-container">
         <label id="chart-toggle-label">Score Chart</label>
